--- a/playbooks/webserver.yml
+++ b/playbooks/webserver.yml
@@ -9,7 +9,7 @@
   connection: local
   gather_facts: no
 
-- hosts: server
+- hosts: webserver
   become: true
   become_user: root
   gather_facts: yes
@@ -18,3 +18,4 @@
     - apache
     - php
     - nfs-client
+    - owncloud
