--- a/playbooks/roles/owncloud/tasks/main.yml
+++ b/playbooks/roles/owncloud/tasks/main.yml
@@ -16,6 +16,15 @@
   with_inventory_hostnames:
     - database
 
+# - name: set config
+#   shell: sed -i "8c 0 => '{{ ipify_public_ip }}'," /var/www/owncloud/config/config.php
+
+- name: add loadbalancers to trusted proxies in owncloud config
+  shell: sed -i "3c 'trusted_proxies' => ['{{ item }}'], 'overwritehost' => '{{ item }}', 'overwriteprotocol' => 'http', " /var/www/owncloud/config/config.php
+  with_inventory_hostnames:
+    - loadbalancer
+  run_once: true
+
 # - name: get my public IP
 #   ipify_facts:
 
