--- a/playbooks/roles/nginx/tasks/main.yml
+++ b/playbooks/roles/nginx/tasks/main.yml
@@ -13,7 +13,7 @@
   shell: sed -i "3i server {{ hostvars[item]['ansible_default_ipv4']['address'] }};" nginx
   args:
     chdir: /etc/nginx/sites-available/
-  with_items: groups['webserver']
+  with_items: "{{ groups['webserver'] }}"
 
 #     - name: replace new_ip_1
 #       replace:
