--- a/playbooks/roles/nfs-server/tasks/main.yml
+++ b/playbooks/roles/nfs-server/tasks/main.yml
@@ -57,7 +57,7 @@
   gluster_volume:
     state: present
     name: owncloud
-    bricks: /var/www/html
+    bricks: /var/www/owncloud
     cluster: "{% for host in groups['nfs'] %}{{ hostvars[host]['ansible_default_ipv4']['address'] }},{% endfor %}"
     force: yes
   run_once: true
