--- a/task3/roles/nfs-client/tasks/main.yml
+++ b/task3/roles/nfs-client/tasks/main.yml
@@ -18,7 +18,7 @@
 - name: mount the NFS
   mount:
     path: /nfs/owncloud/
-    src: "{{ groups['nfs'][0] }}:/owncloud" # only for one server, not multiple
+    src: "{{ nfs }}:/owncloud" # only for one server, not multiple
     fstype: glusterfs
     state: mounted
 
