--- a/playbooks/roles/owncloud/tasks/main.yml
+++ b/playbooks/roles/owncloud/tasks/main.yml
@@ -14,6 +14,7 @@
   args:
     chdir: /var/www/owncloud
   with_items: "{{ groups['database'] }}"
+  run_once: true
 
 # - name: set config
 #   shell: sed -i "8c 0 => '{{ ipify_public_ip }}'," /var/www/owncloud/config/config.php
