--- a/playbooks/roles/php/tasks/main.yml
+++ b/playbooks/roles/php/tasks/main.yml
@@ -9,6 +9,12 @@
     name: ['php', 'php-mysql', 'php-gd', 'php-zip', 'php-mbstring', 'php-xml', 'php-intl', 'php-curl']
     state: present
 
+- name: confirure php.ini
+  replace:
+    path: /etc/php/7.0/cli/php.ini
+    regexp: 'upload_max_filesize = 2M'
+    replace: 'upload_max_filesize = 1024M'
+
 - name: install php extensions
   apt:
     name: libapache2-mod-php
