--- a/playbooks/roles/php/tasks/main.yml
+++ b/playbooks/roles/php/tasks/main.yml
@@ -9,24 +9,28 @@
     name: ['php', 'php-mysql', 'php-gd', 'php-zip', 'php-mbstring', 'php-xml', 'php-intl', 'php-curl']
     state: present
 
+- name: install php extensions
+  apt:
+    name: libapache2-mod-php
+  notify:
+    - restart apache2
+
+
+
 - name: confirure php.ini
   replace:
     path: /etc/php/7.0/apache2/php.ini
     regexp: 'upload_max_filesize = 2M'
-    replace: 'upload_max_filesize = 1024M'
+    replace: 'upload_max_filesize = 10240M'
 - name: confirure php.ini
   replace:
     path: /etc/php/7.0/apache2/php.ini
     regexp: 'post_max_size = 8M'
-    replace: 'post_max_size = 1024M'
+    replace: 'post_max_size = 10240M'
 - name: confirure php.ini
   replace:
     path: /etc/php/7.0/apache2/php.ini
     regexp: 'memory_limit = 128M'
-    replace: 'memory_limit = 1024M'
-
-- name: install php extensions
-  apt:
-    name: libapache2-mod-php
+    replace: 'memory_limit = 10240M'
   notify:
     - restart apache2
