--- a/playbooks/roles/apache/tasks/main.yml
+++ b/playbooks/roles/apache/tasks/main.yml
@@ -18,6 +18,9 @@
     dest: /etc/apache2/sites-enabled/owncloud.conf
     state: link
 
+- name: confirure httpd.conf
+  shell: echo 'LimitRequestBody 0' >> /etc/apache2/apache2.conf
+
 - name: restart apache2
   systemd:
     name: apache2
