--- a/task3/backup.yml
+++ b/task3/backup.yml
@@ -13,6 +13,10 @@
     - nfs-client
 
   tasks:
+    - name: install mysql client
+      apt:
+        name: mysql-client-5.7
+        
     - name: copy file
       template:
         src: mysql
@@ -25,7 +29,7 @@
       replace:
         path: /etc/mysql.sh
         regexp: '@host'
-        replace: "{{ database }}"
+        replace: "{{ database_host }}"
 
     - name: replace password
       replace:
