--- a/playbooks/vars/vars.yml
+++ b/playbooks/vars/vars.yml
@@ -12,7 +12,7 @@ instance:
 #  image: "ubuntu-1604-xenial-v20180814"
 
   # machine_type: "n1-standard-1"
-  # zone: "australia-southeast1-b"
+  # zone: "asia-east1-b	"
   image: "ubuntu-1604-xenial-v20180814"
 
 database:
